# LeakLess

./: .gitignore  Cargo.toml  Makefile  README.md
crates/bindle/src/: expander.rs
crates/loader/: Cargo.toml
crates/loader/src/: common.rs  lib.rs
crates/loader/src/bindle/: config.rs  mod.rs
crates/loader/src/local/: config.rs  mod.rs
crates/manifest/src/: lib.rs
crates/outbound-http/: Cargo.toml
crates/outbound-http/src/: host_component.rs  lib.rs
crates/trigger-http/src/: lib.rs
docs/: README.md
examples/config-rust/: spin.toml
examples/config-tinygo/: main.go  spin.toml
examples/http-cpp/: spin.toml
examples/http-rust/: spin.toml
examples/http-rust-outbound-http/: spin.toml
examples/http-rust-router/: spin.toml
examples/http-tinygo/: spin.toml
examples/http-tinygo-outbound-http/: spin.toml
examples/http-tinygo-router/: spin.toml
examples/redis-rust/: spin.toml
examples/rust-key-value/: spin.toml
examples/rust-outbound-mysql/: spin.toml
examples/rust-outbound-pg/: spin.toml
examples/spin-wagi-http/: spin.toml
examples/tinygo-key-value/: spin.toml
examples/tinygo-outbound-redis/: spin.toml
examples/tinygo-redis/: spin.toml
examples/wagi-http-rust/: spin.toml
leakless-dataset/: README.md  serverless_applications_cloudflare.json  serverless_applications_fastly.json  serverless_applications_serverless.json  serverless_applications_spin.json  serverless_applicationst_wonderless.json
leakless-examples/: README.md  encryptor.go
leakless-examples/download-from-s3/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/download-from-s3/src/: lib.rs
leakless-examples/gcore-script/: dump_leakless_memory.sh
leakless-examples/leakless-authentication-at-the-edge/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-authentication-at-the-edge-simple/: call_example.sh  spin.toml
leakless-examples/leakless-authentication-at-the-edge-src/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-authentication-at-the-edge-src/src/: lib.rs
leakless-examples/leakless-authentication-at-the-edge/src/: lib.rs
leakless-examples/leakless-authentication-stored-token/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-authentication-stored-token/src/: lib.rs
leakless-examples/leakless-go-example-authatedge-src-hardcoded-secret/: main.go  spin.toml
leakless-examples/leakless-go-example-authatedge-src-hardcoded-secret/tmp/: main.go
leakless-examples/leakless-go-example-hardcoded-secret/: main.go  spin.toml
leakless-examples/leakless-go-example-secret-within-configfile/: call_example.sh  main.go
leakless-examples/leakless-go-example-src-hardcoded-secret/: main.go  spin.toml
leakless-examples/leakless-go-example-src-hardcoded-secret/encryptor/: encryptor.go
leakless-examples/leakless-go-example-src-hardcoded-secret/tmp/: main.go
leakless-examples/leakless-sign-requests/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-sign-requests-non/: call_example.sh  spin.toml
leakless-examples/leakless-sign-requests-non/src/: lib.rs
leakless-examples/leakless-sign-requests/src/: lib.rs
leakless-examples/leakless-signing-jwt-keys/: call_example.sh  spin.toml
leakless-examples/leakless-signing-jwt-keys-non/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-signing-jwt-keys-non/src/: lib.rs
leakless-examples/leakless-signing-jwt-keys/src/: lib.rs
leakless-examples/leakless-stress-test/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-stress-test-all/: spin.toml
leakless-examples/leakless-stress-test-all/src/: lib.rs
leakless-examples/leakless-stress-test-increasing-enc-length/: Cargo.toml  call_example.sh  spin.toml  spin1  spin1-enc  spin2  spin2-enc  spin3  spin3-enc  spin4  spin4-enc  spin5  spin5-enc  spin6  spin6-enc  spin7  spin7-enc
leakless-examples/leakless-stress-test-increasing-enc-length/src/: lib.rs
leakless-examples/leakless-stress-test/src/: lib.rs
leakless-examples/leakless-transmitting-user-provided-secrets/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-transmitting-user-provided-secrets/src/: lib.rs
leakless-examples/leakless-users-stored-passwords/: Cargo.toml  call_example.sh  spin.toml
leakless-examples/leakless-users-stored-passwords/src/: lib.rs
leakless-examples/webserver/: open_charge_map_sample.json  run_webserver.sh  webserver.py
src/annotation-lib/: Cargo.toml
src/annotation-lib/src/: lib.rs
src/commands/: build.rs  new.rs  up.rs
